--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -12,7 +12,7 @@
           <i class="fas fa-edit fa-fw"></i>
         <% end %>
 
-        <%= link_to photo, method: :delete, class: "btn btn-link btn-sm text-muted" do %>
+        <%= link_to photo, data: { turbo_method: :delete }, class: "btn btn-link btn-sm text-muted" do %>
           <i class="fas fa-trash fa-fw"></i>
         <% end %>
       <% end %>
